# MyNetgen

./: CMakeLists.txt
cmake/: SuperBuild.cmake
libsrc/general/: hashtabl.hpp
libsrc/meshing/: global.cpp  meshclass.cpp  meshclass.hpp  msghandler.cpp
libsrc/occ/: occgenmesh.cpp  occgeom.cpp  occgeom.hpp
netgenTest/: CMakeLists.txt  MyRefineTest.cpp  RefineTest.cpp  cube.vol  main.cpp  netgenTest.vcxproj  netgenTest.vcxproj.filters  test.vol
netgenTest/x64/Debug/: netgenTest.exe.recipe  netgenTest.ilk  vc142.idb
netgenTest/x64/Debug/netgenTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  netgenTest.lastbuildstate  netgenTest.write.1u.tlog
netgenTest/x64/RelWithDebInfo/: netgenTest.exe.recipe  netgenTest.ilk  vc142.idb
netgenTest/x64/RelWithDebInfo/netgenTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  netgenTest.lastbuildstate  netgenTest.write.1u.tlog
netgenTest/x64/Release/netgenTest.tlog/: netgenTest.lastbuildstate
nglib/: CMakeLists.txt  ng_occ.cpp  nglib.cpp  nglib.h  nglib_occ.h
windows/: netgen.aps
